# end-to-end-sales-forecasting-kpi-dashboard-etl

./: .env.example  .gitignore  .pre-commit-config.yaml  14_DAY_PLAN.md  HIRING_MANAGER_REVIEW.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MainDash.pbix  README.md  README_portfolio.md  SPRINT_SUMMARY.md  checkcsv.py  db.py  docker-compose.yml  forecast_prophet_v2.py  prophet_improved.py  prophet_improved_old.py  pyproject.toml  readme.docx  requirements-dev.txt  requirements.txt  run_daily.cmd  timestamp.txt  uploadforecast.py  verify_views.py  vitamarkets_ultrarealistic_sampledataset.csv  ~$readme.docx
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci_old.yml
docs/: ARCHITECTURE.md  BUSINESS_DECISIONS.md  DASHBOARD_GUIDE.md  DATA_CONTRACT.md  DATA_DICTIONARY.md  FORECASTING_POLICIES.md  KPI_DEFINITIONS.md  ROADMAP.md  SETUP.md  data_contract.md
etl/: refresh_actuals.py
improved prophet forecasts/: simple_prophet_forecast.csv
prophet_forecasts/: forecast_error_metrics.csv  simple_prophet_forecast.csv
prophet_forecasts_20251207_1928/: forecast_error_metrics.csv  prophet_forecasts.csv
prophet_forecasts_20251207_2248/: forecast_error_metrics.csv  prophet_forecasts.csv
reports/: README.md
scripts/: bootstrap.py  run_daily.py  verify_powerbi_contract.sql
setup/: init_db.sql
sql/: contracts.sql
tests/: conftest.py  test_contract_views.py  test_db_writes.py  test_etl.py  test_etl_schema.py  test_forecast_eval.py
vitamarkets/: __init__.py  pipeline.py
vitamarkets_dbt/vitamarkets/: dbt_project.yml
(+4 files in other folders)
